Fix team title display in dark mode

--- a/_sass/components/_cards.scss
+++ b/_sass/components/_cards.scss
@@ -103,7 +103,7 @@
 
 .team-intro-content {
   h3 {
-    color: white;
+    color: $primary-color;
     font-size: $font-size-2xl;
     margin-bottom: $spacing-md;
   }
